--- a/Supported-Languages-and-Formats.mediawiki
+++ b/Supported-Languages-and-Formats.mediawiki
@@ -113,6 +113,6 @@ The following table lists all currently (as of OpenGrok pre-0.12) supported form
 |}
 
 
-Note: 0.3.1 is the initial import version of OpenGrok into the Mercurial repository
+Note: 0.3.1 is the initial import version of OpenGrok into the original Mercurial repository back in opensolaris.org days.
 
 The SUFFIXES can be found in the *AnalyzerFactory.java files in OpenGrok repository.
