--- a/How-to-install-OpenGrok.mediawiki
+++ b/How-to-install-OpenGrok.mediawiki
@@ -25,6 +25,8 @@ You need the following:
 
 After installing the package (e.g. <code>pkgadd -d ./OSOLopengrok-0.?.pkg</code>) or untgzing the binaries in your target directory (e.g. <code>cd your_target_dir ; gzcat opengrok-0.?.tar.gz | tar xf - </code>), you just need to create the index and then you can use the command line interface to grok your sources.
 
+It is also necessary to install SCM environment accessible by OpenGrok for your repositories for the history indexing to work.
+
 === Creating the index ===
 
 OpenGrok's command line use is a typical case where OpenGrok is deployed as indexing service on a webserver for an active source repository, which is updated automatically using scheduled cron jobs.
