--- a/How-to-install-OpenGrok.mediawiki
+++ b/How-to-install-OpenGrok.mediawiki
@@ -6,7 +6,7 @@ This document is a live document, we are updating it as the new versions/changes
 
 You need the following:
 
-* [http://java.sun.com/javase/downloads/index.jsp JDK] 1.6 ("1.6.0_17") or higher
+* [http://www.oracle.com/technetwork/java/ JDK] 1.7 or higher
 * {OpenGrok '''binaries''' from [http://java.net/projects/opengrok/downloads/ downloads] (either the package for Solaris, or .tar.gz with binaries, NOT the src !)
 * [http://ctags.sourceforge.net Exuberant Ctags] for analysis
 * A servlet container like [https://glassfish.dev.java.net/ GlassFish] or [http://tomcat.apache.org Tomcat] (5.x or later) also running with java at least 1.6
