Updated Discussions (mediawiki)

--- a/Discussions.mediawiki
+++ b/Discussions.mediawiki
@@ -10,4 +10,4 @@ The mailing lists are available on http://java.net/projects/opengrok/lists
 
 Archives of mailing lists (opengrok-dev@opensolaris.org and opengrok-discuss@opensolaris.org) prior to moving the project to github are available in compressed form on http://java.net/projects/opengrok/downloads/directory/archive-mails
 
-Current and past archives of opengrok-discuss mailing list in readable/searchable is available on [http://marc.info/?l=opensolaris-opengrok-discuss&r=1&w=2 marc.info]
+Current and past archives of opengrok-discuss mailing list in readable/searchable form is available on [http://marc.info/?l=opensolaris-opengrok-discuss&r=1&w=2 marc.info]
