--- a/Tentative-Roadmap.mediawiki
+++ b/Tentative-Roadmap.mediawiki
@@ -9,7 +9,12 @@ The following minimum criteria must be fulfilled before a new version may be rel
 * No P1 or P2 bugs
 * All bugs and RFEs must be evaluated
 
-=== Release 0.12 ===
+=== Release 0.12 (end of 2013) ===
+
+Feature	Status
+* Lucene 0.4 (Lubos Kosco) 	 done, in trunk
+
+=== Release 0.13 ===
 
 Feature freeze: TBD
 
@@ -17,7 +22,6 @@ Feature	Status
 * bug 327 - per-project configuration
 * bug #17189 - grouping of projects (Vladimir Kotal) 	 in progress
 * pdf/office analyzer (Lubos Kosco) 	 in progress
-* Lucene 0.4 (Lubos Kosco) 	 done, in trunk
 * ??? 	
 
 
