--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -19,7 +19,7 @@ Features:
  Surround SCM added to supported SCMs
  new config options in OpenGrok script
  new search by analyzer/language
- full history tracking for files renamed in Mercurial repository
+ full history tracking for files renamed in Mercurial repository (disabled by default)
  small UI enhancements
  a lot of history cache fixes and tunables
  zaphist history cleanup command
