--- a/How-to-install-OpenGrok.mediawiki
+++ b/How-to-install-OpenGrok.mediawiki
@@ -105,7 +105,17 @@ Since above will also change default location of config file, beforehands(or res
 
 A lot more customizations can be found inside the script, you just need to have a look [https://github.com/OpenGrok/OpenGrok/blob/master/OpenGrok at it], eventually create a configuration out of it and use <code>OPENGROK_CONFIGURATION</code> environment variable to point to it. Obviously such setups can be used for nightly cron job updates of index or other automated purposes.
 
+===== Large number of projects on Tomcat =====
+If you have a large number of projects the http headers start to get big and you need to increase this in the settings.xml file in the http connector add:
+ maxHttpHeaderSize="65536"
+Failure to do so will result in 400 errors after first query - with the error "Error parsing HTTP request header"
+
 == Optional info ==
+
+Additional information can be found in the readme.txt in the doc folder
+
+=== Windows installation ===
+http://algopadawan.blogspot.co.uk/2012/07/installing-opengrok-on-windows.html
 
 === CLI - Command Line Interface Usage ===
 
