--- a/Known-issues.mediawiki
+++ b/Known-issues.mediawiki
@@ -1,4 +1,3 @@
-
 == Known Issues Outside of OpenGrok ==
 
 * Due to Exuberant ctags bugs [http://sourceforge.net/tracker/?func=detail&group_id=6556&atid=106556&aid=1187505 1187505], [http://sourceforge.net/tracker/?func=detail&group_id=6556&atid=106556&aid=2991345 2991345], [http://sourceforge.net/tracker/?func=detail&group_id=6556&atid=106556&aid=2996602 2996602] ctags fails to recognize certain definitions. So OpenGrok will not be able search these
@@ -7,6 +6,7 @@
 * Identifiers which have length of 1 character don't have a link generated - this is actually by purpose ...
 * Due to Exuberant ctags bug [http://sourceforge.net/tracker/?func=detail&group_id=6556&atid=106556&aid=1324663 1324663], OpenGrok might keep waiting for ctags. Workaround is to ignore the problem causing SQL files with -i option to OpenGrok.(fixed in exuberant ctags >= 5.7)
 * We disabled java local variables in 0.10 because of ctags bug [http://sourceforge.net/tracker/?func=detail&group_id=6556&atid=106556&aid=3150230 3150230]
+* Blank page with "Error parsing HTTP request header" and 400 error status code see: [[How-to-install-OpenGrok#Large_number_of_projects_on_Tomcat]]
 
 == OpenGrok Issues, Bugs and Requests for Enhancements ==
 
