--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,14 @@
+
+November 2014 update 0.12.1.1 (0.12-stable)
+-------------------------------------------------
+
+This is bug fix release based on 0.12.1.
+
+Bug fixes:
+  support branches for Mercurial repository #865
+  Search link does not contain project #835
+
+
 May 2014 update 0.12.1
 -------------------------------------------------
 
