--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,13 @@
-June 2015 update 0.12.1.3 (0.12-stable)
+January 2015 update 0.12.1.4 (0.12-stable)
+-------------------------------------------------
+
+This is bug fix release based on 0.12.1.
+
+Bug fixes:
+  check write object to be non null before calling close on it
+  filter repositories based on list of directories before invalidating when doing partial reindex fixes #880
+
+January 2015 update 0.12.1.3 (0.12-stable)
 -------------------------------------------------
 
 This is bug fix release based on 0.12.1.
@@ -6,7 +15,7 @@ This is bug fix release based on 0.12.1.
 Bug fixes:
   change indexpart command in the OpenGrok shell script to require SRC_ROOT
 
-June 2015 update 0.12.1.2 (0.12-stable)
+January 2015 update 0.12.1.2 (0.12-stable)
 -------------------------------------------------
 
 This is bug fix release based on 0.12.1.
