--- a/How-to-build-OpenGrok-from-source.mediawiki
+++ b/How-to-build-OpenGrok-from-source.mediawiki
@@ -52,7 +52,7 @@ Coverity scan: <a href="https://scan.coverity.com/projects/2627">
        src="https://scan.coverity.com/projects/2627/badge.svg"/>
 </a>
 
-Inspecting indexes: [http://code.google.com/p/luke/ Luke] - this site is old, we maintain a fork
- [https://github.com/tarzanek/luke tarzanek/Luke] and downloads can be found on [https://java.net/projects/opengrok/downloads java.net/opengrok/downloads]
+Inspecting indexes: [http://code.google.com/p/luke/ Luke] - this site is abandoned, we maintain a fork on
+ [https://github.com/tarzanek/luke tarzanek Luke] 
 
 (get the latest luke jar from our downloads: [https://java.net/projects/opengrok/downloads java.net Downloads])
