--- a/How-to-build-OpenGrok-from-source.mediawiki
+++ b/How-to-build-OpenGrok-from-source.mediawiki
@@ -53,6 +53,6 @@ Coverity scan: <a href="https://scan.coverity.com/projects/2627">
 </a>
 
 Inspecting indexes: [http://code.google.com/p/luke/ Luke] - this site is abandoned, we maintain a fork on
- [https://github.com/tarzanek/luke tarzanek Luke] 
+ [http://github.com/tarzanek/luke tarzanek Luke] 
 
 (get the latest luke jar from our downloads: [https://java.net/projects/opengrok/downloads java.net Downloads])
