--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,14 @@
+March 2015 update 0.12.1.5 (0.12-stable)
+-------------------------------------------------
+
+This is bug fix release based on 0.12.1.
+
+Bug fixes:
+    change the tunable for fetching history when not found in file history cache fixes #917
+    rename OPENGROK_REMOTE_REPOS to OPENGROK_GENERATE_HISTORY
+    fallback to newer file if genre for older file is null fixes #832
+    fix Solaris package install to depend on JRE 7
+
 January 2015 update 0.12.1.4 (0.12-stable)
 -------------------------------------------------
 
