--- a/How-to-build-OpenGrok-from-source.mediawiki
+++ b/How-to-build-OpenGrok-from-source.mediawiki
@@ -52,6 +52,8 @@ Coverity scan: <a href="https://scan.coverity.com/projects/2627">
        src="https://scan.coverity.com/projects/2627/badge.svg"/>
 </a>
 
+VersionEye: [![Dependency Status](https://www.versioneye.com/user/projects/54b7a584050646ca5c0001aa/badge.svg?style=flat)](https://www.versioneye.com/user/projects/54b7a584050646ca5c0001aa)
+
 Inspecting indexes: [http://code.google.com/p/luke/ Luke] - this site is abandoned, we maintain a fork on [http://github.com/tarzanek/luke tarzanek/Luke] 
 
 (get the latest luke jar from our downloads: [https://java.net/projects/opengrok/downloads java.net Downloads])
