--- a/Discussions.mediawiki
+++ b/Discussions.mediawiki
@@ -9,7 +9,7 @@ There are 2 mailing lists:
 * opengrok-users@yahoogroups.com (user topics)
 * opengrok-dev@yahoogroups.com (developers' discussion)
 
-To subscribe, send email to <mailing_list_name>-subscribe@yahoogroups.com
+To subscribe, send email to <nowiki><mailing_list_name></nowiki>-subscribe@yahoogroups.com
 
 ==== Old archives ====
 
