prepare for 0.13-rc1

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,9 @@
+2016 release 0.13
+-------------------------------------------------
+
+TBD
+
+
 May 2014 update 0.12.1
 -------------------------------------------------
 
